try fix calendae scrolling on IOS

--- a/src/app/shared/components/dfm-calendar/dfm-calendar-week-view/dfm-calendar-week-view.component.scss
+++ b/src/app/shared/components/dfm-calendar/dfm-calendar-week-view/dfm-calendar-week-view.component.scss
@@ -1,7 +1,3 @@
-* {
-	transform: translate3d(0, 0, 0);
-}
-
 h3 {
 	margin: 0;
 }
@@ -160,6 +156,8 @@ h3 {
 			align-items: flex-start;
 			-webkit-align-items: flex-start;
 			flex: 1;
+			transform: translate3d(0, 0, 0);
+
 
 			.calendar-week-view-events-container {
 				min-width: 100%;
